2001-04-14  Dan Winship  <danw@ximian.com>

	* libgnomevfs/gnome-vfs-mime-info.c (get_value_real): Plug a
	memory leak.

	* libgnomevfs/gnome-vfs-mime-handlers.c
	(gnome_vfs_mime_get_short_list_applications): Ditto.

2001-04-14  Maciej Stachowiak  <mjs@eazel.com>

	* modules/translate-method.c (tr_uri_translate): Be less tricky so
	that translate patterns that include a hostname, port, user, etc
	will work properly.

2001-04-13  Darin Adler  <darin@eazel.com>

	* gnome-vfs.spec.in: Remove the slave program from the spec
	file, now that we don't use it any more.

2001-04-13  Darin Adler  <darin@eazel.com>

	* configure.in: Missed Makefile list.

2001-04-13  Darin Adler  <darin@eazel.com>

	* acconfig.h:
	* configure.in:
	Eliminate --disable-libefs, --with-default-backend, and
	GNOME_VFS_DEFAULT_BACKEND.
	
	* libgnomevfs/gnome-vfs-xfer.c: (init_progress): Initialize the
	file index to 0, since we now increment before each item.
	(at_end): Helper function.
	(call_progress_often_internal): Shared code for the two "often"
	versions of the call_progress function. The only change is to
	always send out progress once at the end.
	(call_progress_often),	(call_progress_with_uris_often): Use new
	function to share most of the code.
	(remove_file): Bump the file index before dealing with the file.
	(remove_directory): Bump the file index before dealing with the
	directory.
	(copy_file): Don't bump the file index, because that's now the
	caller's responsibility.
	(copy_directory): Don't bump the file index for the directory
	itself, because that's now the caller's responsibility, but do
	bump the file index before calling copy_file, copy_directory,
	or copy_symlink.
	(copy_items): Bump the file index before calling copy_file,
	copy_directory, or copy_symlink.
	(gnome_vfs_xfer_uri_internal): Reset the file index to 0, since we
	now increment before each item.
	
	* libgnomevfs/gnome-vfs-mime.h:
	* libgnomevfs/gnome-vfs-mime.c: Removed gnome_uri functions that