@@ -1,3 +1,10 @@
+2001-04-17  Darin Adler  <darin@eazel.com>
+
+	* libgnomevfs/gnome-vfs-utils.c:
+	(gnome_vfs_get_local_path_from_uri): Loosen rule so that URLs that
+	say "file:/etc/passwd" will be accepted.
+	* test/test-uri.c: (main): Update test to match.
+
 2001-04-14  Dan Winship  <danw@ximian.com>
 
 	* libgnomevfs/gnome-vfs-mime-info.c (get_value_real): Plug a
